--- a/main.tex
+++ b/main.tex
@@ -1581,6 +1581,52 @@ and then approximates \(x - x_n\) on the right-hand side by the Newton increment
 \[ x_{n+1} = x_n - \frac{2f(x_n)f'(x_n)}{2f'(x_n)^2 - f(x_n)f''(x_n)}. \]
 Halley’s method has a cubic rate of convergence. Compare its practical performance to Newton’s method in solving Lambert’s equation of the previous two problems.}
 
+\textbf{Derivation of Halley's Method Update Formula}
+
+To derive the update formula for Halley's method, we start by examining the approximation of the function \(f(x)\) by a quadratic polynomial \(q(x)\) around \(x_n\):
+\[ q(x) = f(x_n) + f'(x_n)(x - x_n) + \frac{1}{2} f''(x_n)(x - x_n)^2. \]
+
+Setting \(q(x) = 0\) to solve for \(x\), we rearrange this equation as:
+\[ x - x_n = -\frac{f(x_n)}{f'(x_n) + \frac{1}{2} f''(x_n)(x - x_n)}. \]
+
+\textbf{Approximation Using the Newton Increment}
+By substituting \(x - x_n\) with the Newton increment \(-f(x_n)/f'(x_n)\) on the right-hand side, we refine the expression:
+\[ x - x_n = -\frac{f(x_n)}{f'(x_n) + \frac{1}{2} f''(x_n)\left(-\frac{f(x_n)}{f'(x_n)}\right)}. \]
+
+Expanding and simplifying:
+\[ x - x_n = -\frac{f(x_n)}{f'(x_n) - \frac{1}{2} \frac{f''(x_n)f(x_n)}{f'(x_n)}}. \]
+\[ x - x_n = -\frac{f(x_n)f'(x_n)}{f'(x_n)^2 - \frac{1}{2} f''(x_n)f(x_n)}. \]
+Multiplying numerator and denominator by 2 to clear the fraction:
+\[ x - x_n = -\frac{2f(x_n)f'(x_n)}{2f'(x_n)^2 - f(x_n)f''(x_n)}. \]
+
+Thus, the Halley update formula becomes:
+\[ x_{n+1} = x_n - \frac{2f(x_n)f'(x_n)}{2f'(x_n)^2 - f(x_n)f''(x_n)}. \]
+
+\textbf{Comparison of Halley's and Newton's Methods}
+
+\textbf{Convergence Rate:}
+- Newton's method has quadratic convergence, meaning that the number of correct digits approximately doubles with each iteration.
+- Halley's method typically offers cubic convergence, tripling the number of correct digits with each iteration.
+
+\textbf{Practical Performance in Lambert's Equation:}
+For Lambert's equation \(we^w = x\), Newton's method update would be:
+\[ w_{n+1} = w_n - \frac{w_n e^{w_n} - x}{e^{w_n} + w_n e^{w_n}}. \]
+
+To apply Halley's method, we need the second derivative of \(f(w) = we^w - x\):
+\[ f'(w) = (w + 1)e^w, \]
+\[ f''(w) = (w + 2)e^w. \]
+
+Applying Halley’s formula for \(w_{n+1}\):
+\[ w_{n+1} = w_n - \frac{2(we^w - x)(w+1)e^w}{2(w+1)^2 e^{2w} - (we^w - x)(w+2)e^w}. \]
+
+While Halley's method should theoretically converge faster, its practical performance can depend on the specific \(x\):
+
+- For larger values of \(x\), Halley's method could significantly outperform Newton's method due to its higher convergence rate.
+
+- For values of \(x\) near critical points, such as small \(x\) or values causing slow convergence, Halley’s additional complexity might not result in proportionally faster convergence, considering the extra computational overhead per iteration.
+
+In general, if computational overhead is not a concern and rapid convergence is desired, Halley's method is a superior choice. However, Newton's method might be preferred for its simplicity and robustness in cases where function evaluations are particularly costly or when high precision is not as critical.
+
 \subsubsection*{Q5: Consider the function
 \[ f(x) = \begin{cases} 
 0 & \text{if } x = 0 \\
@@ -1588,11 +1634,100 @@ x + x^2 \sin\left(\frac{2}{x}\right) & \text{if } x \neq 0.
 \end{cases} \]
 Calculate its derivative \(f'(x)\), and argue that Newton’s method tends to be repelled by its root \(x = 0\). This failure occurs despite the fact that \(f(x)\) possesses a bounded derivative in a neighborhood of 0.}
 
+To answer this query, let's first calculate the derivative of the function \(f(x)\) and then discuss the behavior of Newton's method near the root \(x = 0\).
+
+\textbf{Derivative of \(f(x)\)}
+The function is defined as:
+\[
+f(x) = \begin{cases} 
+0 & \text{if } x = 0 \\
+x + x^2 \sin\left(\frac{2}{x}\right) & \text{if } x \neq 0
+\end{cases}
+\]
+
+For \(x \neq 0\), the derivative of \(f(x)\) can be calculated using the product rule and the chain rule. We have:
+\[
+f(x) = x + x^2 \sin\left(\frac{2}{x}\right)
+\]
+\[
+f'(x) = 1 + 2x \sin\left(\frac{2}{x}\right) - 2 \cos\left(\frac{2}{x}\right)
+\]
+Here, the derivative involves the term \(2x \sin\left(\frac{2}{x}\right)\) which tends to \(0\) as \(x \to 0\) and \(-2 \cos\left(\frac{2}{x}\right)\), which oscillates as \(x \to 0\). The first term simplifies to \(1\) as \(x \to 0\).
+
+\textbf{Behavior Near \(x = 0\)}
+Even though \(f(x) = 0\) when \(x = 0\), the presence of the term involving the cosine function in the derivative introduces rapid oscillations, making the derivative not well-defined as \(x\) approaches \(0\). This situation affects the stability and convergence of Newton's method.
+
+\textbf{Newton’s Method and Its Repulsion by \(x = 0\)}
+Newton's method updates according to:
+\[
+x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}
+\]
+Given the oscillatory nature of \(f'(x)\) near zero, particularly due to the \(\cos\left(\frac{2}{x}\right)\) term, the denominator in the Newton update formula can experience large swings in value, potentially causing the method to overshoot or vary wildly around zero rather than converging.
+
+The term \(f(x_n)\) itself tends toward zero as \(x_n \to 0\), but since \(f'(x_n)\) can take very large or very small values due to the cosine term, the fraction \(\frac{f(x_n)}{f'(x_n)}\) can behave unpredictably. This behavior results in Newton's method being repelled from the root at \(x = 0\), as successive iterations do not necessarily get closer to zero in a stable manner.
+
+\textbf{Conclusion}
+Despite \(f(x)\) having a bounded derivative in a neighborhood around zero (in the practical sense that the derivative does not tend to infinity), the oscillatory nature and the particular behavior of the terms in the derivative can prevent Newton's method from effectively converging to the root at \(x = 0\). This example highlights a scenario where Newton’s method may fail due to the behavior of the function's derivative, even if the function is smooth and the derivative exists almost everywhere.
+
 \subsubsection*{Q6: The function \(f(x) = x + x^{4/3}\) has \(x = 0\) as a root. Derive the Newton updates}
 \[ x_{n+1} = \frac{\frac{1}{3} x_n^{4/3}}{1 + \frac{4}{3} x_n^{1/3}}, \]
 \text{and show that}
 \[ \lim_{n \to \infty} \frac{x_{n+1}}{x_n^{4/3}} = \frac{1}{3} \]
 \text{for \(x_0\) close to 0. This subquadratic rate of convergence occurs because \(f(x)\) is not twice differentiable at 0.}
+
+To derive the Newton updates for the function \(f(x) = x + x^{4/3}\) and analyze its convergence behavior, we proceed with the following steps:
+
+\textbf{Deriving Newton Updates}
+
+Given the function:
+\[ f(x) = x + x^{4/3} \]
+
+\textbf{1. Calculate the Derivative: }
+   The derivative \(f'(x)\) is required for Newton's method:
+   \[
+   f'(x) = 1 + \frac{4}{3}x^{1/3}
+   \]
+
+\textbf{2. Newton's Update Formula:}
+   Newton's method updates the estimate \(x_n\) using the formula:
+   \[
+   x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}
+   \]
+   Substitute \(f(x_n)\) and \(f'(x_n)\) into the update formula:
+   \[
+   x_{n+1} = x_n - \frac{x_n + x_n^{4/3}}{1 + \frac{4}{3} x_n^{1/3}}
+   \]
+   Simplify the numerator:
+   \[
+   x_{n+1} = x_n - \frac{x_n(1 + x_n^{1/3})}{1 + \frac{4}{3} x_n^{1/3}}
+   \]
+   By observing that \(x_n^{1/3}\) becomes a common term:
+   \[
+   x_{n+1} = x_n - \frac{x_n(1 + x_n^{1/3})}{1 + \frac{4}{3} x_n^{1/3}} = \frac{x_n \left(1 + \frac{4}{3}x_n^{1/3} - 1 - x_n^{1/3}\right)}{1 + \frac{4}{3} x_n^{1/3}}
+   \]
+   \[
+   x_{n+1} = \frac{\frac{1}{3} x_n x_n^{1/3}}{1 + \frac{4}{3} x_n^{1/3}} = \frac{\frac{1}{3} x_n^{4/3}}{1 + \frac{4}{3} x_n^{1/3}}
+   \]
+
+\textbf{Convergence Analysis}
+
+\textbf{1. Asymptotic Behavior as \(n \to \infty\):}
+   To find the limit \(\lim_{n \to \infty} \frac{x_{n+1}}{x_n^{4/3}}\), observe the formula:
+   \[
+   x_{n+1} = \frac{\frac{1}{3} x_n^{4/3}}{1 + \frac{4}{3} x_n^{1/3}}
+   \]
+   Assuming \(x_n \to 0\) as \(n \to \infty\), the term \(x_n^{1/3} \to 0\), simplifying the denominator to approach \(1\):
+   \[
+   \lim_{n \to \infty} \frac{x_{n+1}}{x_n^{4/3}} = \frac{\frac{1}{3} x_n^{4/3}}{x_n^{4/3}} = \frac{1}{3}
+   \]
+
+\textbf{Discussion on Rate of Convergence}
+
+- \textbf{Subquadratic Convergence:} The convergence rate of Newton's method for this function is slower than quadratic due to the non-differentiability of \(f(x)\) at \(x = 0\). Normally, Newton's method has quadratic convergence for functions that are twice continuously differentiable at the root. Here, the term \(x^{4/3}\) in \(f(x)\) contributes a derivative \(x^{1/3}\) that is not differentiable at \(x = 0\), leading to the slower, subquadratic rate.
+
+- \textbf{Impact of Non-Differentiability:} The non-differentiability affects the stability and speed of convergence, as the derivative \(f'(x)\) does not behave smoothly around \(x = 0\).
+
+This analysis highlights the intricate relationship between the differentiability of the function at the root and the convergence characteristics of Newton's method.
 
 \subsubsection*{Q7: Characterize the behavior of Newton’s method in minimizing the function \(f(x) = \sqrt{x^2 + 1}\). When the method converges, what is its order of convergence?}
 
