--- a/main.tex
+++ b/main.tex
@@ -1901,7 +1901,7 @@ The second Newton scheme, which uses \(g(x) = yx^2 - 1\), not only ensures that 
 \[ (I + X)^r = \sum_{k=0}^{\infty} \binom{r}{k} X^k \]
 for square matrices \(X = (x_{ij})\) with norm \(\|X\| < 1\) [81]. Here the norm is generic except for the requirement that \(\|AB\| \leq \|A\| \cdot \|B\|\). The most convenient choice is the Frobenius norm \(\|X\|_F^2\). One can extend the series method to matrices \(Y\) with larger norms by writing \(Y^r = c^r (I + X)^r\), where \(X = \frac{1}{c}Y - I\) for some constant \(c\). Show that under the Frobenius norm the optimal choice of \(c\) satisfies
 \[ c = \frac{\|Y\|_F^2}{\operatorname{tr}(Y)} \quad \text{and} \quad \|X\|_F^2 = \|I\|_F^2 - \frac{\operatorname{tr}(Y)^2}{\|Y\|_F^2}. \]
-\text{When \(\operatorname{tr}(Y)\) is negative, the factor \(c^r\) may be complex.}}
+\text{When, \(\operatorname{tr}(Y)\) is negative, the factor \(c^r\) may be complex.}}
 
 \subsubsection*{Q11: For the weighted least squares criterion
 \[ f(\beta) = \frac{1}{2} \sum_{i=1}^n w_i \left( y_i - \sum_{j=1}^p x_{ij} \beta_j \right)^2, \]
